fix: horizontal scrollbar

--- a/react-app/styles/globals.css
+++ b/react-app/styles/globals.css
@@ -2,6 +2,10 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+html {
+  overflow-x: hidden;
+}
+
 html,
 body {
   padding: 0;
